# pyrat-rust

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  PR_DESCRIPTION.md  README.md  index.html  pyproject.toml  pyrat-game-specifications.txt  pytest.ini  requirements.txt  results.json  rustfmt.toml
cli/: README.md  pyproject.toml
cli/pyrat_runner/: __init__.py  ai_process.py  cli.py  display.py  game_runner.py  logger.py  move_providers.py
cli/tests/: TEST_STRATEGY.md  __init__.py  test_ai_process_init_messages.py  test_direction_parsing.py  test_display.py  test_display_debug.py  test_display_symmetry.py  test_game_runner_timeout_notify.py  test_logger_files.py  test_move_providers.py
engine/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
engine/extension/: Cargo.toml
engine/extension/src/: lib.rs
engine/python/examples/: demo_presets.py
engine/python/pyrat_engine/: MIGRATION.md  MODULE_DESIGN.md  __init__.py  _rust.pyi  env.py  game.py  py.typed
engine/python/pyrat_engine/_core/: __init__.pyi  builder.pyi  game.pyi  observation.pyi  types.pyi
engine/python/pyrat_engine/core/: __init__.py  builder.py  builder.pyi  game.py  game.pyi  observation.py  observation.pyi  types.py  types.pyi
engine/python/tests/: test_builder_api.py  test_direction_utilities.py  test_env.py  test_game.py  test_import.py  test_module_structure.py  test_unified_types.py  test_validation.py  test_wall_mud_overlap.py
engine/rust/benches/: game_benchmarks.rs  mod.rs  profile_lib.rs
engine/rust/src/: bench_scenarios.rs  lib.rs
engine/rust/src/bindings/: game.rs  mod.rs  validation.rs
engine/rust/src/game/: board.rs  builder.rs  cheese_board.rs  game_logic.rs  maze_generation.rs  mod.rs  observations.rs  types.rs  zobrist.rs
eval/orchestrator/: Cargo.toml
eval/orchestrator/src/: descriptor.rs  error.rs  event.rs  executor.rs  id.rs  lib.rs  matchup.rs  outcome.rs  replay_event.rs  run_match.rs  sink.rs  state.rs
eval/orchestrator/src/sinks/: composite.rs  mod.rs  replay.rs
eval/orchestrator/tests/: cancel_midmatch.rs  driver_drop_cancels.rs  embedded_identity.rs  executor_basics.rs  join_error_mapping.rs  match_over_suppression.rs  outcome_from_result.rs  panic_through_composite_releases_replay_buffer.rs  pre_match_sink_error.rs  replay_sink_abandoned_on_required_error.rs  setup_failure_durable.rs  shutdown_awaits_drain.rs  sink_event_error.rs  sink_flush_error.rs
eval/orchestrator/tests/common/: mod.rs
eval/session/: Cargo.toml
eval/session/src/: descriptor.rs  legacy_record.rs  lib.rs  mapping.rs  observation.rs  plan.rs  session.rs  state.rs  store_sink.rs
eval/session/tests/: bootstrap_atomic.rs  cli_run_one.rs  cli_run_tournament.rs  e2e_session.rs  e2e_smoke.rs  resume.rs  shutdown.rs  subscribe.rs  validate.rs
eval/session/tests/common/: mod.rs
eval/store/: Cargo.toml
eval/store/src/: elo.rs  lib.rs  schema.rs  store.rs  types.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: bot_config.rs  bot_discovery.rs  bot_probe.rs  commands.rs  events.rs  json_store.rs  main.rs  match_config.rs  match_runner.rs  random_bot.rs  state.rs
headless/: Cargo.toml
headless/src/: main.rs
headless/tests/: e2e.rs
protocol/pyrat_base/: BUGFIX_GAME_STATE_DESYNC.md  CLAUDE.md  README.md  TEST_COVERAGE_REVIEW.md  pyproject.toml  pytest.ini
protocol/pyrat_base/examples/: __init__.py  dummy_ai.py  greedy_ai.py  random_ai.py  replay_example.py
protocol/pyrat_base/pyrat_base/: __init__.py  base_ai.py  enums.py  io_handler.py  protocol.py  protocol_state.py  replay.py  utils.py
protocol/pyrat_base/pyrat_base/examples/: README.md  dummy_ai.py  greedy_ai.py  random_ai.py  replay_example.py
protocol/pyrat_base/tests/: __init__.py  conftest.py  test_enums.py  test_full_game_simulation.py  test_info_messages.py  test_integration_ai_examples.py  test_io_handler.py  test_protocol.py  test_protocol_state.py  test_replay.py  test_replay_cross_platform.py  test_replay_edge_cases.py  test_replay_validation.py  test_utils.py
protocol/pyrat_base/tests/fixtures/: __init__.py  builders.py  helpers.py  validators.py
protocol/pyrat_base/tests/integration/: __init__.py  test_base_ai_large_commands.py  test_dijkstra_puzzles.py  test_direct_validation.py  (+5 more)
protocol/pyrat_protocol/: Cargo.toml
protocol/pyrat_protocol/src/: framing.rs  lib.rs  pyrat_generated.rs
sdk-python/: Cargo.toml  README.md  pyproject.toml
sdk-python/examples/: greedy.py  iterative.py  search.py  smart_random.py
sdk-python/pyrat_sdk/: __init__.py  bot.py  lookups.py  maze.py  options.py  pathfinding.py  state.py
sdk-python/pyrat_sdk/_wire/: __init__.py  codec.py  connection.py
sdk-python/src/: lib.rs  maze.rs  sim.rs
sdk-python/tests/: conftest.py  test_codec.py  test_hivemind.py  test_options.py  test_state.py
sdk/bot-api/: Cargo.toml
sdk/bot-api/src/: context.rs  info.rs  lib.rs  options.rs
sdk/python/: Cargo.toml  README.md  pyproject.toml
sdk/python/examples/: greedy.py  search.py  smart_random.py
sdk/python/pyrat_sdk/: __init__.py  _engine.pyi  bot.py  options.py  state.py
sdk/python/src/: codec.rs  lib.rs  maze.rs  sim.rs
sdk/python/tests/: conftest.py  test_codec.py  test_context.py  test_hivemind.py  test_options.py  test_reader_loop.py  test_state.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/derive/: Cargo.toml
sdk/rust/examples/: greedy.rs  search.rs  smart_random.rs
sdk/rust/src/: bot.rs  lib.rs  options.rs  state.rs  wire.rs
server/headless/: Cargo.toml
server/headless/src/: main.rs  record.rs
server/headless/tests/: e2e.rs
server/host/: Cargo.toml
server/host/src/: launch.rs  lib.rs  match_config.rs  probe.rs  snapshot.rs  stub.rs
server/host/tests/: cancel.rs  embedded_player.rs  match_lifecycle.rs  orchestration_integration.rs  playing_integration.rs  session_integration.rs  tcp_player.rs
server/wire/: Cargo.toml
server/wire/src/: framing.rs  pyrat_generated.rs
src/: game.rs  (+6 more)
tools/bot-check/: Cargo.toml
tools/bot-check/src/: check.rs  main.rs  manifest.rs
(+256 files in other folders)
