[package]
name = "pyrat-rust"
version = "0.1.0"
edition = "2021"
authors = ["Minh Tri Truong"]
description = "A Rust implementation of the PyRat game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrat"       # This is what other crates will use to import your library
path = "src/lib.rs"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"  # For benchmarking
pretty_assertions = "1.4"  # For better test output

[profile.release]
codegen-units = 1
lto = "fat"


[[bench]]
name = "game_benchmarks"
harness = false
