[package]
name = "pyrat-rust"
version = "0.1.0"
edition = "2021"
authors = ["Minh Tri Truong"]
description = "A Rust implementation of the PyRat game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrat"
path = "rust/src/lib.rs"
crate-type = ["cdylib", "rlib"]  # Both Python module and Rust library

[dependencies]
rand = "0.8"
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
flame = { version = "0.2.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[profile.bench]
debug = true  # Also keep debug info for bench profile

# Just keep the bench target, remove the bin target
[[bench]]
name = "profile"
path = "rust/benches/bin/profile.rs"
harness = false

[[bench]]
name = "game_benchmarks"
path = "rust/benches/game_benchmarks.rs"
harness = false

[features]
default = []
flame = ["dep:flame"]  # Changed from flame_it to flame

[package.metadata.maturin]
name = "pyrat"
module-name = "pyrat._rust"  # Python module will be importable as pyrat._rust
python-source = "python"

[lints.clippy]
# Enable useful lint groups
pedantic = "warn"
nursery = "warn"
