[workspace]
members = ["engine", "engine/extension", "protocol/pyrat_protocol"]
resolver = "2"

[workspace.lints.clippy]
# Lint groups at priority -1 so individual overrides take precedence
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }

# Individual overrides
cargo_common_metadata = "allow"   # root has full metadata; extension is publish = false
multiple_crate_versions = "allow" # transitive deps (hashbrown) bring multiple versions

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[profile.bench]
debug = true
