[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyrat"
version = "0.1.0"
description = "High-performance PyRat game environment"
authors = [
    {name = "Another person"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "gymnasium>=1.0.0",
    "pettingzoo>=1.24.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyrat._rust"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]