[package]
name = "pyrat-rust"
version = "0.1.0"
edition = "2021"
authors = ["Minh Tri Truong"]
description = "A Rust implementation of the PyRat game"
repository = "https://github.com/mintiti/pyrat-rust"
keywords = ["game", "maze", "reinforcement-learning", "python-bindings"]
categories = ["games", "simulation"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrat"
path = "rust/src/lib.rs"
crate-type = ["cdylib", "rlib"]  # Both Python module and Rust library

[dependencies]
rand = "0.10"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
numpy = { version = "0.25", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
ndarray = { version = "0.16", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[profile.bench]
debug = true  # Also keep debug info for bench profile

[[bench]]
name = "game_benchmarks"
path = "rust/benches/game_benchmarks.rs"
harness = false

[[bin]]
name = "profile_game"
path = "rust/benches/bin/profile_game.rs"

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy", "dep:ndarray"]

[package.metadata.maturin]
name = "pyrat_engine"
module-name = "pyrat_engine._rust"  # Python module will be importable as pyrat_engine._rust
python-source = "python"

[lints.clippy]
# Enable useful lint groups but be selective
cargo = "warn"          # Basic cargo lints
complexity = "warn"     # Complexity metrics
correctness = "warn"    # Correctness checks
perf = "warn"          # Performance optimizations
suspicious = "warn"     # Suspicious code patterns

# Disable overly strict groups
pedantic = "allow"      # Too strict for game engine code
nursery = "allow"      # Experimental lints
