[package]
name = "pyrat-headless"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pyrat-headless"
path = "src/main.rs"

[[bin]]
name = "test-bot"
path = "src/bin/test_bot.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flatbuffers = "25.2.10"
pyrat-host = { path = "../host" }
pyrat-rust = { path = "../engine", default-features = false }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
