[project]
name = "pyrat-sdk"
version = "0.1.0"
description = "Python SDK for building PyRat bots"
authors = [{ name = "PyRat Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flatbuffers>=24.0.0",
    "numpy>=1.20.0",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "pyrat_sdk._engine"
python-source = "."
