[package]
name = "pyrat-orchestrator"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
pyrat-host = { path = "../../server/host" }
pyrat-rust = { path = "../../engine", default-features = false }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
pyrat-bot-api = { path = "../../sdk/bot-api" }
pyrat-protocol = { path = "../../server/protocol" }
