[package]
name = "pyrat-orchestrator"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
pyrat-host = { path = "../../server/host" }
pyrat-rust = { path = "../../engine", default-features = false }
pyrat-bot-api = { path = "../../sdk/bot-api" }
pyrat-protocol = { path = "../../server/protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tempfile = "3"
