[package]
name = "pyrat-eval-store"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
statrs = { version = "0.18", default-features = false }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
