[package]
name = "pyrat-sdk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pyrat-wire = { path = "../../server/wire" }
pyrat-protocol = { path = "../../server/protocol" }
pyrat-engine-interface = { path = "../../interface" }
pyrat = { package = "pyrat-rust", path = "../../engine", default-features = false }
pyrat-sdk-derive = { path = "derive" }
flatbuffers = "25.2.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "io-util", "time"] }

[lints]
workspace = true
