[package]
name = "pyrat-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flatbuffers = "25.2.10"
pyrat-rust = { path = "../../engine", default-features = false }
pyrat-wire = { path = "../wire" }
tokio = { version = "1", features = ["sync", "macros", "io-util", "time", "net", "rt"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time", "net"] }

[lints]
workspace = true
