[package]
name = "pyrat-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
fastrand = "2"
flatbuffers = "25.2.10"
pyrat-bot-api = { path = "../../sdk/bot-api" }
pyrat-protocol = { path = "../protocol" }
pyrat-rust = { path = "../../engine", default-features = false }
pyrat-wire = { path = "../wire" }
tokio = { version = "1", features = ["sync", "macros", "io-util", "time", "net", "rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
thiserror = "2"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time", "net"] }

[lints]
workspace = true
