[package]
name = "pyrat-wire"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flatbuffers = "25.2.10"
tokio = { version = "1", features = ["io-util"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "sync"] }

[lints]
workspace = true
