[package]
name = "pyrat-check"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
pyrat-host = { path = "../../server/host" }
pyrat-protocol = { path = "../../server/protocol" }
pyrat-rust = { path = "../../engine", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
toml = "0.8"

[lints]
workspace = true
